# translation-mcp

./: .gitignore  LICENSE  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: claude-code.yml  claude-review.yml  codex-review.yml  gpt-review.yml
src/deepl_mcp/: __init__.py  server.py
