[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepl-mcp"
version = "0.1.0"
description = "DeepL Translation MCP Server for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zsaku" }]
keywords = ["mcp", "deepl", "translation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "deepl>=1.18.0",
]

[project.scripts]
deepl-mcp = "deepl_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deepl_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/deepl_mcp"]
